Fix regression where a clip style change did not update layer sizes https://bugs.webkit.org/show_bug.cgi?id=82990

Reviewed by Simon Fraser.

Source/WebCore:

After r111456, the size of composited layers also used clip, whereas
it previously had only used overflow. Because of this, when clip
changes on a render layer, it needs to recalculate its layer tree.

Test: compositing/clip-change.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::styleChanged):

LayoutTests:

* compositing/clip-change-expected.png: Added.
* compositing/clip-change-expected.txt: Added.
* compositing/clip-change.html: Added.


Canonical link: https://commits.webkit.org/101181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113883 268f45cc-cd09-0410-ab3c-d52691b4dbfc